# gstaudiosinkqnx

./: CMakeLists.txt  README.md  configure
src/: qnxaudiosink.c  qnxaudiosink.h
